<resources>
    <string name="app_name">GYM</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation Drawer</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>

    <string name="tip2">When it comes to nutrition, consider these nutritional goals:\n\nConsume enough calories from carbohydrates through foods and beverages high in carbs.\n\nEat enough to prevent hunger. Concentrate on easily digested, high-quality carbohydrates such as bananas, grapes, watermelon, dates and peaches, and foods with low-to-moderate protein content, fiber and fat to prevent digestive issues.\n\nDrink adequate fluids and electrolytes.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
</resources>