<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/complain"
    tools:context=".ContectusFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:hint="Rohit Yadav"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:hint="coding_panda@gmail.com"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/contact_form_subject"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:hint="Feedback/Complaint"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:paddingLeft="10dp"
                android:text="@string/contact_form_message"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="180dp"
                android:gravity="top"
                android:hint="Your message"
                android:paddingLeft="10dp"
                android:inputType="textMultiLine"
                android:textSize="19sp" />

            <Button
                android:id="@+id/postmasseg"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:text="Send"
                android:textColor="#ED931C"
                android:textStyle="bold"
                android:backgroundTint="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:paddingLeft="15dp"
                android:paddingTop="1dp"
                android:paddingRight="15dp"
                android:paddingBottom="1dp" />

        </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>