<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewgym_exercises">

<TextView
    android:id="@+id/backtext"
    android:layout_marginTop="25dp"
    android:drawableStart="@drawable/backarrow"
    android:text="MuscleCreation"
    android:gravity="center_vertical"
    android:paddingStart="5dp"
    android:drawablePadding="6dp"
    android:textSize="21sp"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="50dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/gifimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/arms1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/gifimage"
                android:background="@color/underline" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gifimage"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="Exercises Name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:text="Dumbbell Fly"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/exname"
                android:layout_marginTop="15dp"
                android:background="@color/underline" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/v1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Exercises Time"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/extime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="2*30"
                    android:textColor="@color/black"
                    android:textSize="26sp" />

            </LinearLayout>

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/linear1"
                android:layout_marginTop="10dp"
                android:background="@color/underline" />

            <RelativeLayout
                android:id="@+id/relative_extime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v2"
                android:gravity="center"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/time_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingStart="50dp"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textSize="56sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time_view"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/start_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:onClick="onClickStart"
                        android:text="@string/start"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/stop_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:onClick="onClickStop"
                        android:text="@string/stop"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/reset_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:onClick="onClickReset"
                        android:text="@string/reset"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@+id/v3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/relative_extime"
                android:layout_marginTop="10dp"
                android:background="@color/underline" />

            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative_extime"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/relative_house_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Exercises Description"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/exDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Dumbbell fly exercise targets the sternal heads of your pectoralis major muscles, which are found in your chest, but also strengthens your triceps, deltoids, biceps, wrist flexors and brachialis muscles."
                            android:textColor="@color/black"
                            android:textSize="26sp" />

                    </LinearLayout>


                </RelativeLayout>
            </ScrollView>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>